manifest/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-ns
