manifest/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api-ns
  labels: 
    app.kubernetes.io/name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryhis6869.azurecr.io/tripinsights/trips:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: trips
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api-ns
spec:
  selector:
    app: trips
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
