manifest/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  labels: 
    app.kubernetes.io/name: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryhis6869.azurecr.io/tripinsights/tripviewer:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: tripviewer
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
spec:
  selector:
    app: tripviewer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
