manifest/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api-ns
  labels: 
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryhis6869.azurecr.io/tripinsights/user-java:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: user-java
        volumeMounts:
        - name: api-secrets-volume
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: api-secrets-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "api-secrets-kv"
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api-ns
spec:
  selector:
    app: user-java
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
