manifest/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api-ns
  labels: 
    app.kubernetes.io/name: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryhis6869.azurecr.io/tripinsights/userprofile:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: userprofile
        volumeMounts:
        - name: api-secrets-volume
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: api-secrets-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "api-secrets-kv"          
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api-ns
spec:
  selector:
    app: userprofile
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
